connect kafka pod

--- a/src/main/resources/application-k8s.properties
+++ b/src/main/resources/application-k8s.properties
@@ -1,6 +1,6 @@
 selected.environment=k8s
 logging.level.com.example.deploy_spring_test=DEBUG
-kafka.host=localhost:9092
+kafka.host=kafka-service:9092
 
 spring.datasource.url=jdbc:postgresql://db-service:5432/test_db
 spring.datasource.username=admin
