--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 selected.environment=local
 logging.level.com.example.deploy_spring_test=DEBUG
-kafka.host=localhost:9092
+kafka.host=kafka-service:9092
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=test_user
