add dockerfile image

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,5 +36,6 @@ jobs:
           image: alexandrudaniel/my-spring-app:latest
           tags: latest
           registry: docker.io
+          dockerfile: Dockerfile.ci
           username: ${{ secrets.DOCKER_USERNAME}}
           password: ${{ secrets.DOCKER_PASSWORD}}
