--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: mr-smithers-excellent/docker-build-push@v6
         name: Build & push Docker image
         with:
-          image: alexandrudaniel/my-spring-app:latest
+          image: alexandrudaniel/my-spring-app
           tags: latest
           registry: docker.io
           dockerfile: Dockerfile
