--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Build with Maven
         run: mvn clean install -DskipTests
 
+  deploy:
+
+    runs-on: ubuntu-latest
+
+    steps:
       - uses: mr-smithers-excellent/docker-build-push@v6
         name: Build & push Docker image
         with:
