--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 selected.environment=dev
 logging.level.com.example.deploy_spring_test=DEBUG
 kafka.host=localhost:9092
-
-spring.datasource.url=jdbc:postgresql://db-service:5432/test_db
+kafka.enable=false
+spring.datasource.url=jdbc:postgresql://db_container:5432/test_db
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
