--- a/src/main/resources/application-k8s.properties
+++ b/src/main/resources/application-k8s.properties
@@ -1,6 +1,7 @@
 selected.environment=k8s
 logging.level.com.example.deploy_spring_test=DEBUG
 kafka.host=kafka-service:9092
+kafka.enable=true
 
 spring.datasource.url=jdbc:postgresql://db-service:5432/test_db
 spring.datasource.username=admin
