--- a/deploy/kafka/kafkaConfigMap.yaml
+++ b/deploy/kafka/kafkaConfigMap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kafka-config
 data:
   KAFKA_BROKER_ID: "1"
-  KAFKA_ZOOKEEPER_CONNECT: "10.99.230.61:2181"
+  KAFKA_ZOOKEEPER_CONNECT: "zookeeper-service:2181"
   KAFKA_LISTENERS: "PLAINTEXT://:9092"
   KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://localhost:9092"
 
